install the copy webpack plugin

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/softcraft-development/d3-playground#readme",
   "devDependencies": {
+    "copy-webpack-plugin": "^4.0.1",
     "webpack": "^3.5.3"
   },
   "dependencies": {
