--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "devDependencies": {
     "copy-webpack-plugin": "^4.0.1",
     "eslint": "^4.4.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "webpack": "^3.5.3"
   },
   "dependencies": {
