--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/softcraft-development/d3-playground#readme",
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
     "copy-webpack-plugin": "^4.0.1",
     "eslint": "^4.4.1",
     "node-sass": "^4.5.3",
