--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-env": "^1.6.0",
     "copy-webpack-plugin": "^4.0.1",
     "eslint": "^4.4.1",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
