--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.4",
     "eslint": "^4.4.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.3"
   },
   "dependencies": {
